css overflow fixes

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -22,10 +22,10 @@
 }
 
 * {box-sizing:border-box;}
-html {height: 100%; }
-  body {height:100%; display:flex; justify-content:space-between;}
+html {width:100%; height: 100%; overflow:hidden;}
+  body {width:100%; height: 100%; overflow:hidden; display:flex; justify-content:space-between;}
     #left_container {display:flex; flex-direction: column; justify-content:space-between; flex-grow:3;}
-      #focal_container {flex-grow:3; border-right:1px black solid; border-bottom:1px black solid; position:relative; overflow:hidden;}
+      #focal_container {flex-grow:3; border-right:1px black solid; border-bottom:1px black solid; position:relative; }
         #focal {
           .graph_view_mixin;
           .node {}
@@ -38,7 +38,7 @@ html {height: 100%; }
           .node.potential_dest_group      {width:0; height:0;}
           .node.potential_dest            {.text_node; font-size:6px; color:#000; background:transparent;}
         }
-      #global_container {flex-grow:2; border-right:1px black solid; border-top:1px black solid; position:relative; overflow:hidden;}
+      #global_container {flex-grow:2; border-right:1px black solid; border-top:1px black solid; position:relative; }
         #global {
           .graph_view_mixin;
           .dummy_node {position:absolute; width:0px; height:0px;}
@@ -53,5 +53,4 @@ html {height: 100%; }
     font-size: 6px;
     line-height: 12px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-
   }
